@@ -1,14 +1,17 @@
 package com.test.finalproject.entity;
 
 import com.test.finalproject.enums.AccountStatus;
+import com.test.finalproject.enums.RoleName;
 import jakarta.persistence.*;
 import lombok.*;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.io.Serializable;
 import java.sql.Timestamp;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @Entity
@@ -17,7 +20,6 @@ import java.util.List;
 @AllArgsConstructor
 @Getter @Setter
 @Builder
-@EqualsAndHashCode
 public class User extends BaseEntity implements Serializable, UserDetails {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -41,12 +43,15 @@ public class User extends BaseEntity implements Serializable, UserDetails {
 
     private AccountStatus status;
 
+    @Enumerated(EnumType.STRING)
+    private RoleName role;
+
     @OneToMany(mappedBy = "user", fetch = FetchType.LAZY, cascade = CascadeType.ALL,orphanRemoval = true)
     private List<Task> tasks;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role.toString()));
     }
 
     @Override
